# SparkleShare

./: .gitignore  .gitmodules  .sparkleshare  .travis.yml  ARTWORK  AUTHORS  Authors.txt  CODE_OF_CONDUCT.md  Makefile  Makefile.am  NEWS  News.txt  PublicKeyOnly.xml  PublicPrivate.xml  README  README.md  README.rst  README.windows.md  RELEASE_NOTES.txt  SparkleController.cs  SparklePony.cs  SparkleShare  SparkleShare.sln  SparkleShare.txt  SparkleShare.userprefs  SparkleShare.usertasks  TRADEMARK  addmedia.xlst  appveyor.yml  autogen.sh  build.bat  bump-version.sh  configure.ac  create-po-file  create-pot-file  icon-theme-installer  key.text  meson.build  meson_options.txt  patch  (+8 more)
SparkleDiff/: LeftRevisionView.cs  Makefile.am  RevisionImage.cs  RevisionView.cs  RightRevisionView.cs  SparkleDiff.cs  SparkleDiff.csproj  SparkleDiffWindow.cs  sparklediff.in
SparkleLib/: AssemblyInfo.cs.in  AuthenticationInfo.cs  Backend.cs  BaseListener.cs  BaseRepository.cs  ChangeSet.cs  Command.cs  Configuration.cs  Defines.cs  Defines.cs.in  Extensions.cs  Logger.cs  Makefile.am  SSHAuthenticationInfo.cs  SparkleAnnouncement.cs  SparkleBackend.cs  SparkleChangeSet.cs  SparkleCommit.cs  SparkleConfig.cs  SparkleEvents.cs  SparkleExceptions.cs  SparkleExtensions.cs  SparkleFetcher.cs  SparkleFetcherBase.cs  SparkleFetcherGit.cs  SparkleFetcherMercurial.cs  SparkleFetcherSSH.cs  SparkleFolder.cs  SparkleGit.cs  SparkleHelpers.cs  SparkleLib.csproj  SparkleLib.sln  SparkleListener.cs  SparkleListenerBase.cs  SparkleListenerFactory.cs  SparkleListenerIrc.cs  SparkleListenerTcp.cs  SparkleLogger.cs  SparkleOptions.cs  SparklePath.cs  (+15 more)
SparkleLib/Fetcher/: BaseFetcher.cs  SSHFetcher.cs
SparkleLib/Git/: GitCommand.cs  GitFetcher.cs  GitRepository.cs  Makefile.am  SparkleFetcherGit.cs  SparkleGit.cs  SparkleGitConfig.cs  SparkleLib.Git.csproj  SparkleRepoGit.cs
SparkleLib/Gut/: SparkleFetcherGut.cs  SparkleGut.cs  SparkleRepoGut.cs
SparkleLib/Hg/: Makefile.am  SparkleFetcherHg.cs  SparkleRepoHg.cs
SparkleLib/Listener/: BaseListener.cs  ListenerFactory.cs  TcpListener.cs
SparkleLib/Marklogic/: Info.plist  Notes.txt  SparkleFetcherMarkLogic.cs  SparkleLib.Marklogic.csproj  SparkleRepoMarkLogic.cs  SparkleShareLogFactory.cs  SparkleShareLogger.cs
SparkleLib/Repository/: BaseRepository.cs  ChangeSet.cs  Watcher.cs
SparkleLib/Rsync/: SparkleFetcherRsync.cs  SparkleRepoRsync.cs
SparkleLib/Scp/: SparkleFetcherScp.cs  SparkleRepoScp.cs
SparkleLib/Tests/: SparkleFolderTests.cs  SparkleLib.Tests.csproj  packages.config
SparkleLib/Unison/: SparkleFetcherUnison.cs  SparkleRepoUnison.cs
SparkleLib/windows/: AssemblyInfo.cs  Defines.tt  GlobalAssemblyInfo.tt  Settings.StyleCop  SparkleLib.Git.csproj  SparkleLib.csproj  getversion.tt  transform_tt.cmd
SparkleShare/: Defines.cs.in  Main.cs  Makefile.am  Program.cs  Repository.cs  SparkleAbout.cs  SparkleAboutController.cs  SparkleAvatars.cs  SparkleBubble.cs  SparkleBubbles.cs  SparkleBubblesController.cs  SparkleController.cs  SparkleControllerBase.cs  SparkleControllerBase.posix.cs  SparkleControllerBase.windows.cs  SparkleDialog.cs  SparkleDiff.cs  SparkleEntry.cs  SparkleEventLog.cs  SparkleEventLogController.cs  SparkleExtensions.cs  SparkleFetcher.cs  SparkleHelpers.cs  SparkleInfobar.cs  SparkleIntro.cs  SparkleInvitation.cs  SparkleInvite.cs  SparkleKeys.cs  SparkleLinController.cs  SparkleLink.cs  SparkleLog.cs  SparkleNoteController.cs  SparkleOptions.cs  SparklePaths.cs  SparklePlugin.cs  SparklePreferencesDialog.cs  SparkleRepo.cs  SparkleSetup.cs  SparkleSetup.cs~HEAD  SparkleSetupController.cs  (+25 more)
SparkleShare/Common/: AboutController.cs  Avatars.cs  BaseController.cs  BubblesController.cs  EventLogController.cs  Invite.cs  Makefile.am  NoteController.cs  Page.cs  PageController.cs  Plugin.cs  SetupController.cs  SparkleShare.cs  SparkleShare.projitems  SparkleShare.shproj  StatusIconController.cs
SparkleShare/Linux/: About.cs  Bubbles.cs  Controller.cs  EventLog.cs  Makefile.am  Note.cs  README.GNOME3.md  README.md  Setup.cs  SetupWindow.cs  SparkleAbout.cs  SparkleBubbles.cs  SparkleController.cs  SparkleEventLog.cs  SparkleNote.cs  SparkleSetup.cs  SparkleSetupWindow.cs  SparkleShare.Autostart.desktop  SparkleShare.Linux.csproj  SparkleShare.csproj  SparkleShare.sln  SparkleSpinner.cs  SparkleStatusIcon.cs  SparkleUI.cs  SparkleUIHelpers.cs  StatusIcon.cs  UserInterface.cs  UserInterfaceHelpers.cs  meson.build  org.sparkleshare.SparkleShare.InviteOpener.desktop  org.sparkleshare.SparkleShare.Invites.desktop  org.sparkleshare.SparkleShare.Nightly.desktop  org.sparkleshare.SparkleShare.appdata.xml  org.sparkleshare.SparkleShare.desktop  sparkleshare  sparkleshare-invite-opener.desktop  sparkleshare.appdata.xml  sparkleshare.desktop  sparkleshare.in
SparkleShare/Mac/: .gitignore  AppDelegate.cs  Controller.cs  EmptyXmlFile.xml  Growl.plist  Info.plist  MainMenu.xib  MainMenu.xib.designer.cs  Makefile.am  README.md  SparkleAbout.cs  SparkleAlert.cs  SparkleAvatars.cs  SparkleBadger.cs  SparkleBubble.cs  SparkleBubbleController.cs  SparkleBubbles.cs  SparkleController.cs  SparkleEventLog.cs  SparkleEventLogController.cs  SparkleIntro.cs  SparkleLog.cs  SparkleMacController.cs  SparkleMacWatcher.cs  SparkleNote.cs  SparkleSetup.cs  SparkleSetupController.cs  SparkleSetupWindow.cs  SparkleShare.Mac.csproj  SparkleShare.csproj  SparkleShare.sln  SparkleStatusIcon.cs  config  (+10 more)
Sparkles/: AuthenticationInfo.cs  BaseFetcher.cs  BaseListener.cs  BaseRepository.cs  ChangeSet.cs  Command.cs  Configuration.cs  Extensions.cs  InstallationInfo.Directory.cs  InstallationInfo.Directory.cs.in  InstallationInfo.cs  Invite.cs  ListenerFactory.cs  Logger.cs  Makefile.am  OpenSSLCommand.cs  Preset.cs  SSHAuthenticationInfo.cs  SSHCommand.cs  SSHFetcher.cs  Sparkles.csproj  TcpListener.cs  User.cs  Watcher.cs  meson.build
data/: Makefile.am  gnome-design.sparkle  gnome-design.sparkleshare-invitation  info.plist  sparkleshare-folder.icns  sparkleshare-mac.icns  sparkleshare-osx-start  sparkleshare.desktop.in  sparkleshare.icns  sparkleshare.invitation
(+711 files in other folders)
