ASSEMBLY = SparkleDiff
TARGET = exe

LINK = $(REF_SPARKLEDIFF)

SOURCES = \
$(top_srcdir)/SparkleShare/Defines.cs \
$(top_srcdir)/FriendFace/FriendFace.cs \
$(top_srcdir)/FriendFace/IconProvider.cs \
$(top_srcdir)/FriendFace/GravatarIconProvider.cs \
SparkleDiff.cs \
SparkleDiffWindow.cs \
RevisionView.cs \
RevisionImage.cs

include $(top_srcdir)/build/build.mk
