ASSEMBLY = SparkleDiff
TARGET = exe

LINK = $(REF_SPARKLEDIFF)

SOURCES =  \
	$(top_srcdir)/FriendFace/FriendFace.cs \
	$(top_srcdir)/FriendFace/GravatarIconProvider.cs \
	$(top_srcdir)/FriendFace/IconProvider.cs \
	RevisionImage.cs \
	RevisionView.cs \
	SparkleDiff.cs \
	SparkleDiffWindow.cs

include $(top_srcdir)/build/build.mk
