SUBDIRS = \
	icons \
	html \
	plugins

dist_pixmaps_DATA = \
	side-splash.png \
	tutorial-slide-1.png \
	tutorial-slide-2.png \
	tutorial-slide-3.png \
	tutorial-slide-4.png \
        avatar-a.png \
        avatar-b.png \
        avatar-c.png \
        avatar-d.png \
        avatar-e.png \
        avatar-f.png \
        avatar-g.png \
        avatar-h.png \
        avatar-i.png \
        avatar-j.png \
        avatar-k.png \
	about.png

pixmapsdir = $(pkgdatadir)/pixmaps/

MAINTAINERCLEANFILES = \
	Makefile.in
