EXTRA_DIST = \
  AppDelegate.cs \
  Info.plist \
  MainMenu.xib \
  MainMenu.xib.designer.cs \
  SparkleAbout.cs \
  SparkleAlert.cs \
  SparkleIntro.cs \
  SparkleEventLog.cs \
  SparkleMacController.cs \
  SparkleShare.csproj \
  SparkleShare.sln \
  SparkleStatusIcon.cs \
  SparkleUI.cs \
  SparkleWindow.cs
