EXTRA_DIST = \
  AppDelegate.cs \
  Info.plist \
  MainMenu.xib \
  MainMenu.xib.designer.cs \
  SparkleAbout.cs \
  SparkleAlert.cs \
  SparkleSetup.cs \
  SparkleEventLog.cs \
  SparkleMacController.cs \
  SparkleMacWatcher.cs \
  SparkleShare.csproj \
  SparkleShare.sln \
  SparkleStatusIcon.cs \
  SparkleUI.cs \
  SparkleSetupWindow.cs
