EXTRA_DIST = \
  AppDelegate.cs \
  Growl.framework \
  Growl.plist \
  Info.plist \
  MainMenu.xib \
  MainMenu.xib.designer.cs \
  SparkleAbout.cs \
  SparkleAlert.cs \
  SparkleBadger.cs \
  SparkleBubbles.cs \
  SparkleController.cs \
  SparkleEventLog.cs \
  SparkleMacWatcher.cs \
  SparkleSetup.cs \
  SparkleSetupWindow.cs \
  SparkleShare.csproj \
  SparkleShare.sln \
  SparkleStatusIcon.cs \
  SparkleUI.cs
